-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11
-
Component/s: hotspot
-
b13
These three tests fail with the nmt stack tracing change:
FAILED: runtime/appcds/sharedStrings/FlagCombo.java
FAILED: runtime/NMT/CheckForProperDetailStackTrace.java
FAILED: runtime/NMT/PrintNMTStatistics.java
# Internal Error (/scratch/cphillim/hg/11metadata-purge/open/src/hotspot/share/services/virtualMemoryTracker.cpp:108), pid=4744, tid=474
5
# assert(contain_region(addr, size)) failed: Not contain this region
Command Line: -XX:+UnlockDiagnosticVMOptions -XX:NativeMemoryTracking=detail -XX:+PrintNMTStatistics
Host: xxxxxxxx, Intel(R) Xeon(R) CPU E5-2699 v3 @ 2.30GHz, 72 cores, 503G, Oracle Linux Server release 7.0
Time: Fri Mar 2 15:58:00 2018 EST elapsed time: 0 seconds (0d 0h 0m 0s)
Current thread (0x00007f692c037000): JavaThread "DestroyJavaVM" [_thread_in_vm, id=4745, stack(0x00007f69369f1000,0x00007f6936af2000)]
Stack: [0x00007f69369f1000,0x00007f6936af2000], sp=0x00007f6936aefdf0, free space=1019k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x180ae62] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, c
har const*, int, unsigned long)+0x162
V [libjvm.so+0x180bd5f] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xafdded] report_vm_error(char const*, int, char const*, char const*, ...)+0xdd
V [libjvm.so+0x17f072b] ReservedMemoryRegion::add_committed_region(unsigned char*, unsigned long, NativeCallStack const&)+0x6b
V [libjvm.so+0x17f1076] VirtualMemoryTracker::walk_virtual_memory(VirtualMemoryWalker*) [clone .constprop.34]+0xf6
V [libjvm.so+0x17f1170] VirtualMemorySummary::snapshot(VirtualMemorySnapshot*)+0x20
V [libjvm.so+0x13320e0] MemBaseline::baseline(bool)+0x250
V [libjvm.so+0x1341ad2] MemTracker::report(bool, outputStream*)+0x1b2
V [libjvm.so+0xea2d97] print_statistics()+0x527
V [libjvm.so+0xea4790] before_exit(JavaThread*)+0x500
V [libjvm.so+0x175d165] Threads::destroy_vm()+0x135
V [libjvm.so+0xfc7a02] jni_DestroyJavaVM+0x182
C [libjli.so+0x3bbb] JavaMain+0x26b
- relates to
-
JDK-8241004 NMT tests fail on unaligned thread size with debug build
-
- Resolved
-
-
JDK-8191369 NMT: Enhance thread stack tracking
-
- Resolved
-
-
JDK-8202684 Minimal VM build is broken after JDK-8199067, JDK-8202638
-
- Resolved
-
-
JDK-8202772 NMT thread stack tracking causes crashes on AIX
-
- Resolved
-
-
JDK-8249666 Improve Native Memory Tracking to report the actual RSS usage
-
- In Progress
-