8199067: [REDO] NMT: Enhance thread stack tracking

Precise thread stack tracking on Linux and Windows

Reviewed-by: stuefe, coleenp